# odoc-issue-sample-repo

./: dune-project  x.opam
lib-x/: X.ml  X.mli  dune
lib-x/c/: Qux.ml  Qux.mli  X__c.ml  X__c.mli  dune
